[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features=["macros"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
time = { version = "0.3.31", features = ["serde", "parsing"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] } 
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
